# Gatekeeper

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Gatekeeper.pptx
src/gatekeeper/: __init__.py  cache.py  cli.py  datasets.py  manifest.py  prefetch.py  registry.py  report.py  scoring.py  similarity.py
src/gatekeeper/data/: __init__.py  cooccurrence.json  top_packages.json
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_manifest.py  test_prefetch.py  test_registry.py  test_report.py  test_scoring.py  test_similarity.py
