[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper-cli"
version = "1.0.0"
description = "Validate package names against PyPI/npm before installation: typosquat detection, age/release heuristics, and cleaned manifests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gatekeeper contributors" }]
keywords = ["security", "supply-chain", "typosquatting", "pypi", "npm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.21",
]

[project.scripts]
gatekeeper = "gatekeeper.cli:main"

[project.urls]
Homepage = "https://github.com/example/gatekeeper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gatekeeper.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
